--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,10 +8,20 @@
         <p>
             {{ form.username.label }}<br>
             {{ form.username(size=32) }}
+	    {% for error in form.username.errors %}
+	    <div class="alert alert-danger" role="alert">
+		    {{ error }}
+	    </div>
+	    {% endfor %}
         </p>
         <p>
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}
+	    {% for error in form.password.errors %}
+	    <div class="alert alert-danger" role="alert">
+		    {{ error }}
+	    </div>
+	    {% endfor %}
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
