--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,12 +26,23 @@
                                 </ul>
 				<form class="form-inline my-2 my-lg-0">
 					<a class="nav-link" href="#"><i class="fab fa-question-circle-o fa-lg"></a>
+					<a class="nav-link" href="/login">Sign in</a>
 				</form>
 
 			</div>
 		</nav>
 	</div>
 	<div class="container-fluid w-75">
+		<hr>
+		{% with messages = get_flashed_messages() %}
+        	{% if messages %}
+        		<ul>
+            		{% for message in messages %}
+            			<li>{{ message }}</li>
+            		{% endfor %}
+        	</ul>
+        	{% endif %}
+        	{% endwith %}
 		{% block content %}{% endblock %}
 	</div>
 </body>
